// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group renders children correctly 1`] = `
<div
  className="Group"
>
  <button>
    Button 1
  </button>
  <button>
    Button 2
  </button>
</div>
`;

exports[`Group sets classname if passed 1`] = `
<div
  className="Group group-of-buttons"
>
  <button>
    Button 1
  </button>
  <button>
    Button 2
  </button>
</div>
`;
